--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "omenejoseph/enummanager": "dev-master",
-        "omenejoseph/scafolder": "dev-master"
+        "omenejoseph/scafolder": "dev-master",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
