--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "vue-route-middleware": "^1.0.7",
         "vue-router": "^3.1.6",
         "vuex": "^3.1.2"
     }
